commit tree 0ad1d0862ec5a5075a3cb5c4fccb241273788e06

--- a/app/views/artists/index.erb
+++ b/app/views/artists/index.erb
@@ -1,4 +1,6 @@
 <h2>All Artists</h2>
+<a class="button" href="/">Home</a>
+<br><br>
 <ul>
     <% @artists.each do |artist| %>
         <li><a href="/artists/<%= artist.slug %>"><%= artist.name %></a></li>
