--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -2,12 +2,15 @@
 <form action="/songs" method="POST">
     <h3>Song Name: <input type="text" name="song[name]" id="Name"></h3>
     <br>
-    <h3>Select Genre:</h3>
+    <h3>Select Genre(s):</h3>
     <% Genre.all.each do |genre| %>
         <input type="checkbox" id="<%= genre.name %>" name="genres[]" value="<%= genre.id %>">
         <%= genre.name %>
         <br>
     <% end %>
+    <h3>Add an Artist:</h3>
+    
     <h3>Artist Name: <input type="text" name="artist[name]" id="Artist Name"></h3>
+    
     <button type="submit">Create Song</button>
 </form>
