--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,8 +1,15 @@
-<% if flash.has?(:message) %> <%= flash[:message] %> <% end %>
-<h2><%= @song.name %><br></h2>
-<b>Artist: </b><a href="/artists/<%= @song.artist.slug %>"><%= @song.artist.name %></a>
+<% if flash.has?(:message) %> 
+    <%= flash[:message] %> 
+<% end %>
+<h1><%= @song.name %><br></h1>
+<h2>Artist: </h2>
+<a href="/artists/<%= @song.artist.slug %>"><%= @song.artist.name %></a>
 <br><br>
-<b>Genre: </b>
+<h2>Genre: </h2>
 <% @song.genres.each do |genre| %>
     <a href="/genres/<%= genre.slug %>"><%= genre.name %></a>
 <% end %>
+<br><br><br>
+<a href="/songs/<%= @song.slug %>/edit">Edit Song</a>
+<br><br>
+<a href="/">Home</a>
